--- a/hypergraph_CS.html
+++ b/hypergraph_CS.html
@@ -427,7 +427,7 @@
                             <div class="arrow-down text-4xl text-indigo-400 text-center">&darr;</div>
 
                             <!-- Final Synthesized Answer --><div class="retriever-box !border-green-400 w-full">
-                                <h3 class="text-green-300 font-semibold mb-2">5. Final Synthesized Answer</h3>
+                                <h3 class="text-green-300 font-semibold mb-2"> Final Synthesized Answer</h3>
                                 <p class="mt-1 text-sm">"The firmware update introduced a configuration bug. This bug caused packet loss across the core network, leading to an outage in Dallas. A rollback plan was implemented to replace the faulty firmware and restore service."</p>
                             </div>
                         </div>
